fix ios overflow;

--- a/src/root.scss
+++ b/src/root.scss
@@ -1,11 +1,12 @@
 @import "normalize";
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:900&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:900&display=swap");
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   margin: 0;
+  overflow: hidden;
 }
